force-app/main/default/objects/FOPS_Payment__c/FOPS_Payment__c.object-meta.xml
<CustomObject>
    <description>Cash actually received. Tracks FX gain/loss between invoice rate and bank settlement rate.</description>
    <label>Payment</label>
    <nameField>
        <displayFormat>PAY-{00000}</displayFormat>
        <label>Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>