force-app/main/default/objects/FOPS_Payment__c/fields/FOPS_Account__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>FOPS_Payments</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
    <type>Lookup</type>
</CustomField>