force-app/main/default/objects/FOPS_Payment__c/fields/FOPS_Actual_Settlement_Rate__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Actual_Settlement_Rate__c</fullName>
    <inlineHelpText>The rate the bank actually gave you.</inlineHelpText>
    <label>Actual Settlement Rate</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>