force-app/main/default/objects/FOPS_Payment__c/fields/FOPS_Amount_Received_Base__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Amount_Received_Base__c</fullName>
    <label>Amount Received (Base)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>