force-app/main/default/objects/FOPS_Payment__c/fields/FOPS_Bank_Fee_Base__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Bank_Fee_Base__c</fullName>
    <inlineHelpText>Wise/SWIFT fees are real margin leakage - track them.</inlineHelpText>
    <label>Bank Fee (Base)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>