force-app/main/default/objects/FOPS_Payment__c/fields/FOPS_FX_Gain_Loss_Base__c.field-meta.xml
<CustomField>
    <fullName>FOPS_FX_Gain_Loss_Base__c</fullName>
    <inlineHelpText>Settlement rate versus invoice rate. Material over a year of USD/VND flows.</inlineHelpText>
    <label>FX Gain / Loss (Base)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>