force-app/main/default/objects/FOPS_Payment__c/fields/FOPS_Order__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Order__c</fullName>
    <label>Invoice (Order)</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>FOPS_Payments</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>