force-app/main/default/objects/FOPS_Payment__c/fields/FOPS_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Payment_Date__c</fullName>
    <inlineHelpText>Bank value date, not the date you noticed it.</inlineHelpText>
    <label>Payment Date</label>
    <type>Date</type>
    <required>true</required>
</CustomField>