force-app/main/default/objects/FOPS_Payment__c/fields/FOPS_Reference__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Reference__c</fullName>
    <label>Bank Reference</label>
    <length>120</length>
    <type>Text</type>
</CustomField>