force-app/main/default/objects/FOPS_Payment__c/fields/FOPS_Status__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expected</fullName>
                <default>true</default>
                <label>Expected</label>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Partially Applied</fullName>
            </value>
            <value>
                <fullName>Fully Applied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>